<?xml version="1.0" encoding="utf-8"?>
<resources>
	
     <string name="blank"></string>
     
    <string name="app_static_url">http://drinkizy.alwaysdata.net/static/medias/bars/</string>
    <string name="app_url">http://drinkizy.alwaysdata.net</string>
    
    <string name="app_name">Drinkizy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    
    <string name="loading">Chargement&#8230;</string>
    <string name="load_retry">Réessayer</string>
    <string name="load_abort">Annuler</string>
    <string name="load_messagefailed">Il y a eu une erreur lors de la communication avec le serveur. \nPeut-être à cause d\'une perte de connexion \n</string>
	
    <string name="research_placeholder">Tapez un nom de bar, boisson&#8230;"</string>
    <string name="research_loupe">Rechercher</string>
    <string name="theme_sup">Thèmes supplémentaires</string>
    <string name="search_proxi">Rechercher à proximité</string>
    <string name="search_gps">Icone GPS</string>
    <string name="bar_theme">Bars par thème</string>
    <string name="theme_sportif">Sportif</string>
    <string name="theme_concert">Concert</string>
    <string name="theme_pub">Pub</string>
    <string name="theme_geek">Geek</string>
    <string name="theme_rock">Rock</string>
    <string name="theme_lounge">Lounge</string>
    <string name="switch_yes">Oui</string>
    <string name="switch_no">Non</string>
    
    <string name="search_result">Résultat de la recherche</string>
    <string name="bar_image">Image du bar</string>
    <string name="bar_description">Description courte du bar</string>
    <string name="bar_titre">Titre du bar</string>
    <string name="bar_theme_blank">(thèmes du bar)</string>
    <string name="bar_rating">-/10</string>
    <string name="bar_distance">-</string>
    
    <string name="infos_bar">Infos</string>
    <string name="infos_prix">prix&#8230;</string>
    <string name="infos_adress">Adresse</string>
    <string name="infos_tel">Téléphone</string>
    <string name="infos_email">Email</string>
    <string name="infos_web">Site Internet</string>
    
    <string name="menu_bar">Boissons</string>
    
    <string name="avis_bar">Avis</string>
    <string name="avis_image">Avatar</string>
    <string name="avis_info">Information sur le commentaire</string>
    <string name="avis_by">par </string>
    <string name="avis_username">Nom d\'utilisateur</string>
    <string name="avis_date_prepend">le</string>
    <string name="avis_date">Date du commentaire</string>
    <string name="avis_comment">Commentaire (avis)</string>
    
    <string name="plan_bar">Plan</string>
    
    
    <string name="about_created">Créer par \n Lauriane Anthony, Hugo Gresse et Pierre Guilloux</string>
    <string name="about_project">Drinkizy est un projet étudiant crée à l\'école d\'ingénieur IMAC en collaboration avec le master CMW. </string>
    <string name="about_library">Librairies utilisées</string>
    <string-array name="about_libraries">
        <item>Pixlui https://github.com/neopixl/PixlUI</item>
        <item>Universal Image Loader https://github.com/nostra13/Android-Universal-Image-Loader</item>
        <item>Android Async HTTP http://loopj.com/android-async-http/</item>
        <item>Gson https://code.google.com/p/google-gson/</item>
        <item>Guava http://code.google.com/p/guava-libraries/</item>
        <item>System Bar Tint https://github.com/jgilfelt/SystemBarTint</item>
    </string-array>
    <string name="about_imaclogo">Logo de l\'IMAC</string>
    
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Recherche</item>
        <item >Aide</item>
        <item >A Propos</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
		<item>@drawable/ic_action_search</item>
        <item>@drawable/ic_action_help</item>
		<item>@drawable/ic_action_about</item>
    </array>
    
    
</resources>
